Add TLDraw VSCode extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -26,6 +26,7 @@
 		"somewhatstationery.some-sass",
 		"stylelint.vscode-stylelint",
 		"tamasfe.even-better-toml",
+		"tldraw-org.tldraw-vscode",
 		"yzhang.markdown-all-in-one"
 	]
 }
