--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,27 +12,32 @@
 
 	// #region Dotfiles user settings
 
-	// Window title
+	// Window/workbench
 	"workbench.layoutControl.enabled": false,
+	"workbench.editor.wrapTabs": true,
+	"workbench.editor.pinnedTabsOnSeparateRow": true,
+	"workbench.editor.languageDetection": false,
+	"window.density.editorTabHeight": "compact",
 	"window.commandCenter": false,
 	"window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${activeRepositoryBranchName}",
-
-	// Colour
-	"window.autoDetectColorScheme": true,
-
-	// Workbench
+	"window.zoomLevel": -0.5,
 	"workbench.sideBar.location": "right",
 	"workbench.activityBar.location": "top",
 	"workbench.reduceMotion": "on",
 	"workbench.localHistory.enabled": false,
+	"workbench.editor.empty.hint": "hidden",
 	"breadcrumbs.enabled": false,
+	"workbench.startupEditor": "none",
+	"workbench.editor.enablePreview": false,
+
+	// Colour
+	"window.autoDetectColorScheme": true,
 
 	// File Tree
 	"workbench.tree.indent": 18,
 	"workbench.tree.enableStickyScroll": true,
 
 	// Editor
-	"workbench.editor.empty.hint": "hidden",
 	"editor.renderWhitespace": "all",
 	"editor.insertSpaces": false,
 	"editor.dragAndDrop": false,
@@ -40,11 +45,12 @@
 	"editor.fontFamily": "'Cascadia Code', 'Consolas', monospace",
 	"editor.codeLens": false,
 	"editor.stickyScroll.enabled": false,
+	"editor.renderLineHighlight": "all",
 
 	"files.trimTrailingWhitespace": true,
 	"files.insertFinalNewline": true,
 	"files.associations": {
-	  "*.json": "jsonc",
+		"*.json": "jsonc",
 	},
 
 	// Minimap
@@ -58,11 +64,18 @@
 	// Colour highlight extension
 	"color-highlight.markRuler": false,
 
-	// draw.io extension
-	"hediet.vscode-drawio.theme": "atlas",
-
 	// Redhat extensions (XML)
 	"redhat.telemetry.enabled": false,
+
+	// Try to hide the AI rubbish
+	"chat.agent.enabled": false,
+	"chat.mcp.access": "none",
+	"chat.commandCenter.enabled": false,
+	"chat.promptFiles": false,
+	"chat.extensionTools.enabled": false,
+	"chat.edits2.enabled": false,
+	"chat.detectParticipant.enabled": false,
+	"chat.disableAIFeatures": true,
 
 	// #endregion
 }
